--- a/index.html
+++ b/index.html
@@ -2,33 +2,33 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-<title>Fruit Merge v1.07</title>
+<title>Fruit Merge v1.08</title>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js"></script>
 <style>
 :root{--bg:#FDF6E3;--bd:#657B83;--txt:#586E75;--acc:#2AA198;--font:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,sans-serif}
 *{box-sizing:border-box;touch-action:none;-webkit-tap-highlight-color:transparent;user-select:none}
 body{margin:0;overflow:hidden;background:var(--bg);font-family:var(--font);color:var(--txt)}
 #ui{position:absolute;top:0;left:0;width:100%;height:100%;pointer-events:none;z-index:10;display:flex;flex-direction:column;justify-content:space-between}
-.top{height:130px;padding:10px 15px;background:rgba(255,255,255,0.9);backdrop-filter:blur(5px);pointer-events:auto;border-bottom:2px solid var(--bd)}
+.top{height:120px;padding:10px 15px;background:rgba(255,255,255,0.9);backdrop-filter:blur(5px);pointer-events:auto;border-bottom:2px solid var(--bd)}
 .row{display:flex;justify-content:space-between;align-items:center}
-.score{font-size:20px;font-weight:800} .lbl{font-size:9px;opacity:.7;text-transform:uppercase;letter-spacing:1px}
-#next-box{width:40px;height:40px;border:2px dashed var(--bd);border-radius:50%;display:grid;place-items:center;font-size:22px;background:#fff}
+.score{font-size:20px;font-weight:800} .lbl{font-size:9px;opacity:.7;text-transform:uppercase}
+#next-box{width:42px;height:42px;border:2px dashed var(--bd);border-radius:50%;display:grid;place-items:center;font-size:24px;background:#fff}
 .bar{display:flex;justify-content:space-between;background:rgba(0,0,0,.08);padding:5px;border-radius:12px;margin-top:8px}
 .dot{width:14px;height:14px;border-radius:50%;background:rgba(0,0,0,0.1);display:grid;place-items:center;font-size:8px}
-.dot.on{transform:scale(1.1);background:#fff;box-shadow:0 0 5px rgba(0,0,0,0.1)}
+.dot.on{transform:scale(1.2);background:#fff;box-shadow:0 0 5px rgba(0,0,0,0.2)}
 .bot{height:85px;background:rgba(255,255,255,0.95);border-top:2px solid var(--bd);display:flex;align-items:center;padding:0 15px;pointer-events:auto;justify-content:space-between;padding-bottom:env(safe-area-inset-bottom)}
 .btn-grp{display:flex;gap:12px;align-items:center}
-.btn{background:0;border:0;font-size:20px;display:flex;flex-direction:column;align-items:center;opacity:.6;cursor:pointer}
-.btn.act{opacity:1;color:var(--acc);transform:translateY(-3px)} .btn span{font-size:8px;font-weight:800}
+.btn{background:0;border:0;font-size:22px;display:flex;flex-direction:column;align-items:center;opacity:.5;transition:0.2s}
+.btn.act{opacity:1;color:var(--acc);transform:scale(1.1)} .btn span{font-size:8px;font-weight:800}
 .divider{width:2px;height:35px;background:var(--bd);opacity:0.2}
 .modal{position:absolute;top:0;left:0;width:100%;height:100%;background:#0008;z-index:99;display:none;align-items:center;justify-content:center;pointer-events:auto}
 .modal.open{display:flex}
-.card{background:#fff;width:90%;max-width:400px;height:70%;border-radius:20px;display:flex;flex-direction:column;overflow:hidden;box-shadow:0 10px 30px rgba(0,0,0,0.3)}
-.shop-body{flex:1;overflow-y:scroll;padding:15px;background:#fdfdfd;touch-action:pan-y}
-.shop-body::-webkit-scrollbar{width:12px;display:block} .shop-body::-webkit-scrollbar-thumb{background:var(--bd);border-radius:6px;border:3px solid #fdfdfd}
+.card{background:#fff;width:90%;max-width:400px;height:75%;border-radius:20px;display:flex;flex-direction:column;overflow:hidden}
+.shop-body{flex:1;overflow-y:auto;padding:15px;background:#f9f9f9;touch-action:auto}
+.shop-body::-webkit-scrollbar{width:16px} .shop-body::-webkit-scrollbar-thumb{background:var(--bd);border-radius:8px;border:4px solid #f9f9f9}
 .grid{display:grid;grid-template-columns:1fr 1fr;gap:10px}
-.item{border:1px solid #eee;border-radius:12px;padding:12px;text-align:center;background:#fff;transition:0.2s}
-.item.eq{border:2px solid var(--acc);background:#f0fdf4}
+.item{border:1px solid #eee;border-radius:12px;padding:12px;text-align:center;background:#fff}
+.item.eq{border:3px solid var(--acc);background:#f0fdf4}
 .cat-title{font-size:10px;font-weight:900;padding:15px 0 5px;text-transform:uppercase;color:var(--acc);border-bottom:1px solid #eee;grid-column:span 2}
 </style>
 </head>
@@ -42,7 +42,7 @@ body{margin:0;overflow:hidden;background:var(--bg);font-family:var(--font);color
             <div style="text-align:right"><div class="lbl">Wallet</div><div class="score" style="color:var(--acc)">💰<span id="val-wallet">0</span></div></div>
         </div>
         <div class="bar" id="prog"></div>
-        <div style="text-align:center;font-size:10px;margin-top:4px;font-weight:700">HIGH: <span id="sBest">0</span></div>
+        <div style="text-align:center;font-size:10px;margin-top:4px">BEST: <span id="sBest">0</span></div>
     </div>
     <div class="bot">
         <div class="btn-grp">
@@ -60,7 +60,17 @@ body{margin:0;overflow:hidden;background:var(--bg);font-family:var(--font);color
 </div>
 
 <div class="modal" id="m-store"><div class="card"><div style="padding:15px;display:flex;justify-content:space-between;border-bottom:1px solid #eee"><b>Market</b><span onclick="toggleStore()" style="cursor:pointer;font-size:20px">✕</span></div><div class="shop-body" id="shop-container"></div></div></div>
-<div class="modal" id="m-info"><div class="card" style="height:auto;padding:25px"><h3>How to Play</h3><p>• Drag to aim, release to drop.<br>• Identical items merge into the next tier.<br>• <b>Death Line:</b> Stay below red for 2s!<br><br><b>Power-Ups:</b><br>• 💣 <b>Bomb:</b> Clears local area.<br>• 🧹 <b>Broom:</b> Deletes all of one type.<br>• 🪄 <b>Wand:</b> Level up one item.</p><button class="btn" style="background:var(--acc);color:#fff;padding:12px;border-radius:10px;opacity:1;width:100%" onclick="toggleModal('m-info')">Got it!</button></div></div>
+<div class="modal" id="m-info"><div class="card" style="height:auto;padding:25px">
+    <h3>Fruit Merge Guide</h3>
+    <p><b>Basics:</b> Drop items from the top. When two identical items touch, they merge into the next bigger tier. Reach the 12th tier to master the set!</p>
+    <p><b>The Death Line:</b> If items stack above the dashed red line for more than 2 seconds, it's Game Over.</p>
+    <hr>
+    <p><b>Power-Ups:</b> (Tap icon, then tap the board)
+    <br>💣 <b>Bomb:</b> Destroys all items within a medium radius of where you tap.
+    <br>🧹 <b>Broom:</b> Tap a fruit to wipe out every single fruit of that same tier on the screen.
+    <br>🪄 <b>Wand:</b> Tap a fruit to instantly evolve it to the next tier.</p>
+    <button class="btn" style="background:var(--acc);color:#fff;padding:12px;border-radius:10px;opacity:1;width:100%" onclick="toggleModal('m-info')">Got it!</button>
+</div></div>
 <div class="modal" id="m-over"><div style="text-align:center;color:#fff"><h1>GAME OVER</h1><button class="btn" style="background:#fff;color:#000;padding:10px 30px;border-radius:20px;opacity:1" onclick="reset()">Retry</button></div></div>
 
 <script>
@@ -70,8 +80,8 @@ const THEMES={'Mellow':'#FDF6E3','Matcha':'#E8F5E9','Midnight':'#1a1b26','Lavend
 const BORDERS={'Slate':'#657B83','Gold':'#DAA520','Red':'#DC143C','Neon':'#B026FF','Black':'#000000','White':'#FFFFFF','Grey':'#95A5A6','Blue':'#2980B9','Green':'#27AE60','Teal':'#16A085','Orange':'#E67E22','Pink':'#E91E63','Purple':'#8E44AD','Brown':'#795548','Mint':'#1ABC9C','Navy':'#2C3E50'};
 const COLORS=['#F00','#F70','#FF0','#0F0','#00F','#4B0','#940','#F14','#0CE','#FD7','#F45','#32C'];
 
-let st={s:0, w:parseInt(localStorage.getItem('f7_w')||0), h:parseInt(localStorage.getItem('f7_h')||0), inv:JSON.parse(localStorage.getItem('f7_i')||'["sk_Fruit","ot_def","th_Mellow","bd_Slate"]'), 
-    eq:JSON.parse(localStorage.getItem('f7_e')||'{"sk":"Fruit","ot":"def","th":"Mellow","bd":"Slate"}'), next:0, drag:0, x:0, y:0, drop:1, over:0, tool:null, max:-1};
+let st={s:0, w:parseInt(localStorage.getItem('f8_w')||0), h:parseInt(localStorage.getItem('f8_h')||0), inv:JSON.parse(localStorage.getItem('f8_i')||'["sk_Fruit","ot_def","th_Mellow","bd_Slate"]'), 
+    eq:JSON.parse(localStorage.getItem('f8_e')||'{"sk":"Fruit","ot":"def","th":"Mellow","bd":"Slate"}'), next:0, drag:0, x:0, y:0, drop:1, over:0, tool:null, max:-1};
 
 const cv=document.getElementById('c'), cx=cv.getContext('2d'), eng=E.create();
 let W, H;
@@ -81,7 +91,7 @@ function rsz(){
     cv.width=W*devicePixelRatio; cv.height=H*devicePixelRatio;
     cx.scale(devicePixelRatio,devicePixelRatio);
     C.clear(eng.world,0,1);
-    const t=200;
+    const t=250; 
     const floor=B.rectangle(W/2,H-85+t/2,W,t,{isStatic:1,friction:0.6,label:'floor'});
     const lw=B.rectangle(0,H/2,30,H*2,{isStatic:1});
     const rw=B.rectangle(W,H/2,30,H*2,{isStatic:1});
@@ -104,7 +114,7 @@ Ev.on(eng,'collisionStart',e=>{
 function loop(){
     E.update(eng,16); cx.clearRect(0,0,W,H);
     document.body.style.background=THEMES[st.eq.th];
-    const dl=170; // Adjusted for slimmer header
+    const dl=140; // High Death Line
     cx.beginPath(); cx.moveTo(15,dl); cx.lineTo(W-15,dl); cx.strokeStyle='#F44'; cx.setLineDash([5,5]); cx.stroke(); cx.setLineDash([]);
     cx.fillStyle=BORDERS[st.eq.bd]; cx.globalAlpha=0.6; cx.fillRect(0,0,15,H); cx.fillRect(W-15,0,15,H); cx.globalAlpha=1;
 
@@ -124,7 +134,7 @@ function loop(){
     if(st.drag && st.drop && !st.tool){
         let gx=Math.max(35,Math.min(W-35,st.x));
         cx.beginPath(); cx.moveTo(gx,dl-10); cx.lineTo(gx,H-85); cx.strokeStyle='#aaa'; cx.setLineDash([5,5]); cx.stroke();
-        cx.font="30px serif"; cx.globalAlpha=0.4; cx.fillText(SKINS[st.eq.sk][st.next],gx,dl-30); cx.globalAlpha=1;
+        cx.font="30px serif"; cx.globalAlpha=0.4; cx.fillText(SKINS[st.eq.sk][st.next],gx,dl-10); cx.globalAlpha=1;
     }
     if(!st.over) requestAnimationFrame(loop);
 }
@@ -140,9 +150,10 @@ function act(){
     let bs=C.allBodies(eng.world);
     if(st.tool){
         if(st.tool==='bomb'){ 
-            C.remove(eng.world, bs.filter(b=>!b.isStatic && b.tier!==undefined && M.Vector.magnitude(M.Vector.sub(b.position,{x:st.x,y:st.y}))<90)); 
+            C.remove(eng.world, bs.filter(b=>!b.isStatic && b.tier!==undefined && M.Vector.magnitude(M.Vector.sub(b.position,{x:st.x,y:st.y}))<100)); 
         } else {
-            let target=Q.point(bs,{x:st.x,y:st.y}).find(b=>b.tier!==undefined);
+            // Wider detection for tools
+            let target=bs.find(b=>b.tier!==undefined && M.Vector.magnitude(M.Vector.sub(b.position,{x:st.x,y:st.y})) < b.circleRadius+20);
             if(target){
                 if(st.tool==='broom') C.remove(eng.world, bs.filter(b=>b.tier===target.tier));
                 if(st.tool==='wand' && target.tier<11){
@@ -152,8 +163,8 @@ function act(){
             }
         }
         st.tool=null; document.querySelectorAll('.pwr').forEach(b=>b.classList.remove('act'));
-    } else if(st.drop && st.y > 130){
-        const b=B.circle(Math.max(35,Math.min(W-35,st.x)),150,10+(st.next*6),{restitution:0.3});
+    } else if(st.drop && st.y > 120){
+        const b=B.circle(Math.max(35,Math.min(W-35,st.x)),140,10+(st.next*6),{restitution:0.3});
         b.tier=st.next; C.add(eng.world,b);
         st.next=Math.floor(Math.random()*5); updPre(); st.drop=0; setTimeout(()=>st.drop=1,500);
     }
@@ -164,7 +175,7 @@ function updSc(n){ st.s+=n; st.w+=Math.floor(n/10); document.getElementById('sCu
 function updPrg(t){ if(t>st.max){st.max=t; renderPrg();} }
 function updPre(){ document.getElementById('next-box').innerText=SKINS[st.eq.sk][st.next]; }
 function renderPrg(){ const d=document.getElementById('prog'); d.innerHTML=''; for(let i=0;i<12;i++) d.innerHTML+=`<div class="dot ${i<=st.max?'on':''}" style="color:${COLORS[i]}">${i<=st.max?SKINS[st.eq.sk][i]:''}</div>`; }
-function save(){ localStorage.setItem('f7_i',JSON.stringify(st.inv)); localStorage.setItem('f7_e',JSON.stringify(st.eq)); localStorage.setItem('f7_h',st.h); localStorage.setItem('f7_w',st.w); }
+function save(){ localStorage.setItem('f8_i',JSON.stringify(st.inv)); localStorage.setItem('f8_e',JSON.stringify(st.eq)); localStorage.setItem('f8_h',st.h); localStorage.setItem('f8_w',st.w); }
 function toggleModal(id){ document.getElementById(id).classList.toggle('open'); }
 function reset(){ location.reload(); }
 function toggleFull(){ if(!document.fullscreenElement) document.documentElement.requestFullscreen(); else document.exitFullscreen(); }
@@ -185,13 +196,17 @@ function toggleStore(){
                 const own=st.inv.includes(i.id), eq=(st.eq.sk==i.v||st.eq.ot==i.v||st.eq.th==i.v||st.eq.bd==i.v);
                 let prv = i.n;
                 if(cat==='Skins') prv=SKINS[i.v][0];
-                if(cat==='Themes') prv=`<div style="width:22px;height:22px;background:${THEMES[i.v]};border-radius:50%;margin:0 auto;border:1px solid #ccc"></div>`;
-                if(cat==='Borders') prv=`<div style="width:22px;height:22px;background:${BORDERS[i.v]};border-radius:50%;margin:0 auto;border:1px solid #ccc"></div>`;
+                if(cat==='Themes') prv=`<div style="width:24px;height:24px;background:${THEMES[i.v]};border-radius:50%;margin:0 auto;border:2px solid #ddd"></div>`;
+                if(cat==='Borders') prv=`<div style="width:24px;height:24px;background:${BORDERS[i.v]};border-radius:50%;margin:0 auto;border:2px solid #ddd"></div>`;
                 const el=document.createElement('div'); el.className=`item ${eq?'eq':''}`;
-                el.innerHTML=`${prv}<br><b>${i.n}</b><br><small>${eq?'Equipped':(own?'Owned':'$'+i.p)}</small>`;
+                el.innerHTML=`<div style="font-size:24px;margin-bottom:5px">${prv}</div><b>${i.n}</b><br><small>${eq?'Equipped':(own?'Owned':'$'+i.p)}</small>`;
                 el.onclick=()=>{
-                    if(own){ if(cat==='Skins')st.eq.sk=i.v; if(cat==='Outlines')st.eq.ot=i.v; if(cat==='Themes')st.eq.th=i.v; if(cat==='Borders')st.eq.bd=i.v; }
-                    else if(st.w>=i.p){ st.w-=i.p; st.inv.push(i.id); if(cat==='Skins')st.eq.sk=i.v; if(cat==='Outlines')st.eq.ot=i.v; if(cat==='Themes')st.eq.th=i.v; if(cat==='Borders')st.eq.bd=i.v; }
+                    if(own){ 
+                        if(cat==='Skins')st.eq.sk=i.v; if(cat==='Outlines')st.eq.ot=i.v; if(cat==='Themes')st.eq.th=i.v; if(cat==='Borders')st.eq.bd=i.v; 
+                    } else if(st.w>=i.p){ 
+                        st.w-=i.p; st.inv.push(i.id); 
+                        if(cat==='Skins')st.eq.sk=i.v; if(cat==='Outlines')st.eq.ot=i.v; if(cat==='Themes')st.eq.th=i.v; if(cat==='Borders')st.eq.bd=i.v;
+                    }
                     save(); toggleStore(); toggleStore(); updPre(); renderPrg(); document.getElementById('val-wallet').innerText=st.w;
                 };
                 g.appendChild(el);
